[package]
name = "cosmos_cw"
version = "0.1.0"
authors = ["Mark"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["contract"]
contract = []
library = []

[dependencies]
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
schemars = "0.8.16"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
thiserror = "1.0.56"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "0.20.0"
cosmwasm-schema = "1.5.0"

[[example]]
name = "schema"
required-features = ["contract"]

[workspace]
members = ["."]