[package]
name = "cosmos_cw"
version = "0.1.0"
authors = ["Mark"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "schema"
path = "examples/schema.rs"

[features]
default = ["contract"]
contract = []
library = []

[dependencies]
cosmwasm-std = "1.3.0"
cw-storage-plus = "1.1.0"
schemars = "0.8.16"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
cosmwasm-schema = "1.5.0"
cw20 = ">=1.0.0,<2.0.0"
serde_json = "1.0.142"
sha2 = "0.10.9"
k256 = "0.13.4"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "0.20.0"

[[example]]
name = "schema"
required-features = ["contract"]


# Add this profile section
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[package.metadata.optimizer]
contracts = ["."]

